# rdk-bluetooth_mgr

./: CONTRIBUTING.md  Makefile.am  README.txt  configure.ac
conf/: btmgr-htmlcontrol.service  btmgr.service
include/: btmgr.h  btmgr_priv.h  btrMgr_ctrl.h  btrMgr_serviceIfce.h
include/audioCap/: btrMgr_audioCap.h
include/columbo/: btrMgr_Columbo.h
include/common/: btrMgr_Types.h  btrMgr_mediaTypes.h
include/iarmBtIfce/: btrMgr_iarmBtIfce.h
include/leOnboarding/: btrMgr_LEOnboarding.h  ecdh.h
include/logger/: btrMgr_logger.h
include/persistIf/: btrMgr_persistIface.h
include/priv/: btmgr_priv.h
include/rpc/: btmgr_iarm_interface.h  btrMgr_IarmInternalIfce.h
include/streamIn/: btrMgr_streamIn.h  btrMgr_streamInGst.h
include/streamOut/: btrMgr_streamOut.h  btrMgr_streamOutGst.h
include/sysDiag/: btrMgr_SysDiag.h
src/: Makefile.am  btrMgr_ctrl.c  btrMgr_serviceMain.c  main.c
src/audioCap/: Makefile.am  btrMgr_audioCap.c
src/columbo/: Makefile.am  btrMgr_Columbo.c
src/ctrl/: Makefile.am  btmgr_bus.c  btrMgr_ctrl.c
src/iarmBtIfce/: btrMgr_iarmBtIfce.c
src/ifce/: Makefile.am  btrMgr.c
src/leOnboarding/: Makefile.am  btrMgr_LEOnboarding.c  ecdh.c
src/main/: Makefile.am  btmgr.c  btmgr_priv.h  btrMgr_main.c
src/persistIf/: Makefile.am  btrMgr_persistIface.c
src/rpc/: Makefile.am  btmgr_iarm_external_interface.c  btmgr_iarm_interface.h  btmgr_iarm_internal_interface.c
src/streamIn/: Makefile.am  btrMgr_streamIn.c  btrMgr_streamInGst.c
src/streamOut/: Makefile.am  btrMgr_streamOut.c  btrMgr_streamOutGst.c
src/sysDiag/: Makefile.am  btrMgr_SysDiag.c
tests/: Makefile.am  btmgr_test.c  btmgr_test_fcgi.c  btrMgr_test.c  btrMgr_testFcgi.c
tests/streamInOut/: Makefile.am  btrMgr_streamInOutCoreTest.c
tests/streamOut/: Makefile.am  btrMgr_streamOutCoreTest.c  btrMgr_streamOutTest.c
